<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_report_24dp"
        android:title="@string/reports" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_tasks"
        android:icon="@drawable/ic_format_list_numbered_24dp"
        android:title="@string/tasks" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_chat_24dp"
        android:title="@string/chat" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_person_24dp"
        android:title="@string/profile" />
</menu>
